--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 <title>clear after cloudy </title>
 <meta charset="utf-8">
+  <style>
+  a {
+  color:black;
+ }
+ </style>
 </head>
 
 <body>
