--- a/dream.html
+++ b/dream.html
@@ -11,16 +11,16 @@
 </head>
 
 <body>
-<h1>  <a href="index.html">여느 가을의 꿈</a> </h1>
+<h1>  <a href="index.html">hello html</a> </h1>
 <ol>
-  <li><a href="dream.html">DREAM</a></li>
-  <li><a href="nct.html">NCT</a></li>
-  <li><a href="future.html">FUTURE</a></li>
+  <li><a href="dream.html">hello</a></li>
+  <li><a href="nct.html">html</a></li>
+  <li><a href="future.html">css</a></li>
 </ol><p>
-<h2><strong>MY FIRST AND LAST</strong></h2>
+<h2><strong>MY 학교생활에 대한 고찰</strong></h2>
 </p>
-  '두근거리는 마음이 사랑이라면<br>
-  내 꿈은 나의 첫사랑이야.<br>
-  내가 이렇게 널 좋아한다는 걸<br>
-  네가 알아준다면 정말 좋을텐데'
+  '정시 ㄱㄱ<br>
+  자퇴ㅗ.<br>
+  뭐야<br>
+  이게 뭐하는 짓잊'
 </body>
