--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 
 <body>
-<h1> <a href="index.html">여느 가을의 꿈</a> </h1>
+<h1> <a href="index.html">hello html</a> </h1>
 <ol>
-  <li><a href="dream.html">DREAM</a></li>
-  <li><a href="nct.html">NCT</a></li>
-  <li><a href="future.html">FUTURE</a></li>
+  <li><a href="dream.html">hello</a></li>
+  <li><a href="nct.html">html</a></li>
+  <li><a href="future.html">css</a></li>
 </ol>
-아스라히 사라져가는 가을의 향을 담은 단풍을<br>
-조심스레 책 사이에 끼워 넣었다
+야! 이기영! <br>
+여름이었다.
 </body>
