--- a/nct.html
+++ b/nct.html
@@ -11,15 +11,13 @@
 </head>
 
 <body>
-<h1>  <a href="index.html">여느 가을의 꿈</a> </h1>
+<h1>  <a href="index.html">hello html</a> </h1>
 <ol>
-  <li><a href="dream.html">DREAM</a></li>
-  <li><a href="nct.html">NCT</a></li>
-  <li><a href="future.html">FUTURE</a></li>
+  <li><a href="dream.html">hello</a></li>
+  <li><a href="nct.html">html</a></li>
+  <li><a href="future.html">css</a></li>
 </ol><p>
-<h2><strong>NCT</strong></h2>
+<h2><strong>css</strong></h2>
 <p>
-누군가를 열정적으로 좋아한다는 건,<br>
-생각만 해도 기분이 좋아지는 무언가가 있다는 건,<br>
-참 좋은거야
+뻐킹!
 </body>
