--- a/dream.html
+++ b/dream.html
@@ -14,7 +14,7 @@
 <h1>  <a href="index.html">hello html</a> </h1>
 <ol>
   <li><a href="dream.html">hello</a></li>
-  <li><a href="nct.html">html</a></li>
+  <li><a href="egoing.html">html</a></li>
   <li><a href="future.html">css</a></li>
 </ol><p>
 <h2><strong>MY 학교생활에 대한 고찰</strong></h2>
